Fix vertical and horizontal alignment of sponsor logos

--- a/pyconde/skins/ep14/static/assets/sass/_cmsplugins.scss
+++ b/pyconde/skins/ep14/static/assets/sass/_cmsplugins.scss
@@ -21,11 +21,16 @@
             -webkit-filter: none;
         }
     }
-    a, img {
-        display: block;
+    a {
+        display: table-cell;
+        width: 112px;
+        height: 55px;
+        text-align: center;
+        vertical-align: middle;
     }
     img {
         max-width: 112px;
         max-height: 55px;
+        vertical-align: middle;
     }
 }
